Fixed horizontal scrolling noticed on small screens

--- a/app/assets/css/modules/_site-header.css
+++ b/app/assets/css/modules/_site-header.css
@@ -16,7 +16,7 @@
 
   &__menu-content {
     opacity: 0;
-    width: 100%;
+    width: 80%;
     transform: scale(1.2);
     transition: all 0.5s ease-out;
     text-align: center;
@@ -24,6 +24,7 @@
     z-index: -10;
 
     &--is-visible {
+      width: 100%;
       transform: scale(1);
       opacity: 1;
       position: absolute;
@@ -35,6 +36,7 @@
       transform: scale(1);
       opacity: 1;
       display: block;
+      width: 100%;
       background-color: transparent;
       z-index: 9;
     }
@@ -133,7 +135,7 @@
     margin-top: 60px;
     bottom: 0;
     padding: 0;
-
+    position: relative;
     border-bottom: 2px solid $hoverGray;
 
     @mixin atMedium {
